Shutdown PeriodicShardedIndexConsistencyChecker after ReplicationCoordinator so no thread will try to pause the job after it has stopped

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • v4.4, v4.2
    • Sharding 2020-06-29
    • 13
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Normally, when mongod is shutting down, stepdown will get initiated. However, this is only best effort and it is possible that it is not guaranteed to stepdown. This means that it can go ahead and call stop on the index consistency checker. If the replication in the background decides to stepdown, it can trigger the stepdown hook and call pause on the checker after it has already been stopped. This will end up hitting this assertion and since it is running inside the repl executor, the assertion will be uncaught and cause the mongod to terminate.

            Assignee:
            Cheahuychou Mao
            Reporter:
            Randolph Tan
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: