SERVER-48229 Shutdown PeriodicShardedIndexConsistencyChecker after ReplicationCoordinator so no thread will try to pause the job after it has stopped

(cherry picked from commit 6083eca15b723f878645de53158c6543769dcdb5)